--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6151,6 +6151,19 @@ Section: 0},
 	year = {2023}
 }
 
+@Online{zheng2023WhenAeHelpful,
+	file = {References/pdf/zheng2023WhenAeHelpful.pdf},
+	author = {Mingqian Zheng AND Jiaxin Pei AND Lajanugen
+                  Logeswaran AND Moontae Lee AND David Jurgens},
+	title = {{When "A Helpful Assistant" Is Not Really Helpful:
+                  Personas in System Prompts Do Not Improve
+                  Performances of Large Language Models}},
+	year = 2023,
+	eprint = {2311.10054v3},
+	primaryclass = {cs.CL},
+	archiveprefix = {arXiv}
+}
+
 @article{zheng2025UnsupervisedOntologyConstruction,
 	file = {References/pdf/zheng2025UnsupervisedOntologyConstruction.pdf},
 	title = {An {Unsupervised} {Ontology} {Construction} {Method} {Based} on {Pre}-trained {Language} {Model}},
