--- a/todo.org
+++ b/todo.org
@@ -35,3 +35,15 @@ CLOSED: [2025-11-14 Fri 13:36]
 :CREATED:  [2025-11-14 Fri 13:32]
 :ID:       a0579105-f16e-4530-88a0-6487c6ae001e
 :END:
+
+* TODO Update Related Work
+:PROPERTIES:
+:CREATED:  [2025-11-17 Mon 13:26]
+:ID:       693b7537-bf82-443e-b386-2ff9709c0016
+:END:
+
+* TODO Update Introduction
+:PROPERTIES:
+:CREATED:  [2025-11-17 Mon 13:26]
+:ID:       aded2629-977b-4920-a731-5f202ad816db
+:END:
