--- a/todo.org
+++ b/todo.org
@@ -31,19 +31,19 @@ CLOSED: [2025-11-14 Fri 13:36]
 :ID:       a0579105-f16e-4530-88a0-6487c6ae001e
 :END:
 
-* TODO Update Related Work
+* TODO Related Work
 :PROPERTIES:
 :CREATED:  [2025-11-17 Mon 13:26]
 :ID:       693b7537-bf82-443e-b386-2ff9709c0016
 :END:
 
-* TODO Update Introduction
+* TODO Introduction
 :PROPERTIES:
 :CREATED:  [2025-11-17 Mon 13:26]
 :ID:       aded2629-977b-4920-a731-5f202ad816db
 :END:
 
-* INPROGRESS Update Factors
+* INPROGRESS Factors
 :PROPERTIES:
 :CREATED:  [2025-11-17 Mon 13:27]
 :ID:       bf9d0300-05c9-4b1d-a747-ac08ff29d009
