--- a/todo.org
+++ b/todo.org
@@ -58,10 +58,13 @@ CLOSED: [2025-11-14 Fri 13:36]
 - State "DONE"       from "INPROGRESS" [2025-11-14 Fri 13:36]
 :END:
 
-*** INPROGRESS Domain Context
+*** TODO Domain Context
 :PROPERTIES:
 :CREATED:  [2025-11-14 Fri 12:22]
 :ID:       cdf445f5-dd58-47bd-b9af-ba54b841fd11
+:END:
+:LOGBOOK:
+- State "TODO"       from "INPROGRESS" [2025-11-17 Mon 13:29]
 :END:
 
 * TODO Respose Variation
