--- a/todo.org
+++ b/todo.org
@@ -67,7 +67,7 @@ CLOSED: [2025-11-14 Fri 13:36]
 - State "TODO"       from "INPROGRESS" [2025-11-17 Mon 13:29]
 :END:
 
-* TODO Respose Variation
+*** TODO Respose Variation
 :PROPERTIES:
 :CREATED:  [2025-11-14 Fri 12:24]
 :ID:       2f0d1b84-8a48-444b-9aaf-541877f50295
