--- a/todo.org
+++ b/todo.org
@@ -2,12 +2,6 @@
 :ID:       d1334a06-ed7b-4e34-8522-f19b6c94cb2b
 :END:
 
-* TODO Convert Factor Explanations to Ontology Learning, not Ontology Population
-:PROPERTIES:
-:CREATED:  [2025-11-14 Fri 13:32]
-:ID:       a0579105-f16e-4530-88a0-6487c6ae001e
-:END:
-
 * TODO Related Work
 :PROPERTIES:
 :CREATED:  [2025-11-17 Mon 13:26]
@@ -77,4 +71,10 @@ CLOSED: [2025-11-14 Fri 13:36]
 :PROPERTIES:
 :CREATED:  [2025-11-14 Fri 12:30]
 :ID:       d750c277-9dc1-46da-a089-40a061c71b03
+:END:
+
+** TODO Convert Factor Explanations to Ontology Learning, not Ontology Population
+:PROPERTIES:
+:CREATED:  [2025-11-14 Fri 13:32]
+:ID:       a0579105-f16e-4530-88a0-6487c6ae001e
 :END:
