--- a/main.tex
+++ b/main.tex
@@ -410,9 +410,9 @@ the LLM.
 
 LLMs can be utilized as instruction-following agents, fine-tuned for a
 specific objective or coupled with a data store to facilitate
-data-substantiated text generation with each approach having its own merits
-and demerits. Different approaches highlight the level of context, task
-adaptation and data grounding is required by LLMs for ontology population.
+data-substantiated text generation . Different approaches highlight the level
+of context, task adaptation and data grounding is required by LLMs for
+ontology population.
 \begin{itemize}
 \item A significant portion of LLM approaches are focused on
   \textbf{prompting} strategies. Prompt engineering has itself become an area
@@ -461,7 +461,7 @@ adaptation and data grounding is required by LLMs for ontology population.
 \label{sec:experimentation}
 
 We perform ontology population as a ranked retrieval problem and investigate
-the influence of the ontology factors: structure and, entity labels and the
+the influence of the ontology factors: structure and entity labels, and the
 LLM factors: choice of LLM, prompting approach over zero-shot and few-shot
 prompting, domain context and, response variation over temperature variation
 and statistical consistency.
