--- a/main.tex
+++ b/main.tex
@@ -411,8 +411,8 @@ the LLM.
 LLMs can be utilized as instruction-following agents, fine-tuned for a
 specific objective or coupled with a data store to facilitate
 data-substantiated text generation . Different approaches highlight the level
-of context, task adaptation and data grounding is required by LLMs for
-ontology population.
+of context, task adaptation and data grounding required by LLMs for ontology
+population.
 \begin{itemize}
 \item A significant portion of LLM approaches are focused on
   \textbf{prompting} strategies. Prompt engineering has itself become an area
