--- a/main.tex
+++ b/main.tex
@@ -415,7 +415,7 @@ of context, task adaptation and data grounding required by LLMs for ontology
 population.
 
 \begin{itemize}
-\item A significant portion of LLM approaches are focused on
+\item A significant number of LLM approaches are focused on
   \textbf{prompting} strategies. Prompt engineering has itself become an area
   of research \cite{liu2023JailbreakingChatgptVia,mosbach2023FewShotFine,
     qiao2023ReasoningWithLanguage,schulhoff2024PromptReportSystematic,
