--- a/main.tex
+++ b/main.tex
@@ -426,7 +426,7 @@ population.
       Practices for Prompt Engineering with OpenAI API}} for structuring
   prompts. Taking advantage of the in-context learning capabilities of LLMs,
   prompting methods focus on strategies that require the LLM to perform a task
-  without any example (zero-shot), through the provision of providing
+  without any example (zero-shot), by providing
   illustrative examples to facilitate better understanding of the task
   (few-shot) or by sequential prompting by breaking down a task into a
   sequence of steps allowing LLMs to reason better (Chain-of-Thought
