--- a/main.tex
+++ b/main.tex
@@ -425,8 +425,8 @@ population.
       Practices for Prompt Engineering with OpenAI API}} for structuring
   prompts. Taking advantage of the in-context learning capabilities of LLMs,
   prompting methods focus on strategies that require the LLM to either perform
-  a task without any example (zero-shot), by providing illustrative examples
-  to facilitate better understanding of the task (few-shot) or by sequential
+  a task without any example (zero-shot), to utilize illustrative examples
+  with the intention of better task alignment (few-shot) or by sequential
   prompting by breaking down a task into a sequence of steps allowing LLMs to
   reason better (Chain-of-Thought \cite{wei2022ChainThoughtPrompting}). These
   strategies indicate the relevance of the pre-learnt knowledge of LLMs for
