--- a/main.tex
+++ b/main.tex
@@ -426,11 +426,11 @@ population.
   prompts. Taking advantage of the in-context learning capabilities of LLMs,
   prompting methods focus on strategies that require the LLM to either perform
   a task without any example (zero-shot), to utilize illustrative examples
-  with the intention of better task alignment (few-shot) or, by sequential
-  prompting by breaking down a task into a sequence of steps allowing LLMs to
-  reason better (Chain-of-Thought \cite{wei2022ChainThoughtPrompting}). These
-  strategies indicate the relevance of the pre-learnt knowledge of LLMs for
-  ontologies and their ability to adapt when given additional context.
+  with the intention of better task alignment (few-shot) or, by sequentially
+  breaking down a task into a sequence of steps allowing LLMs to reason better
+  (Chain-of-Thought \cite{wei2022ChainThoughtPrompting}). These strategies
+  indicate the relevance of the pre-learnt knowledge of LLMs for ontologies
+  and their ability to adapt when given additional context.
 \item While LLMs are capable of performing several tasks `as-is',
   task-specific \textbf{fine-tuning} provides an effective strategy to improve
   performance when in-context learning is unable to yield improvements
