--- a/todo.org
+++ b/todo.org
@@ -42,6 +42,12 @@ CLOSED: [2025-11-17 Mon 13:27]
 :ID:       5583d178-4227-4c4c-a312-d7504461fb88
 :END:
 
+**** INPROGRESS 
+:PROPERTIES:
+:CREATED:  [2025-11-17 Mon 13:59]
+:ID:       b621559c-7261-4786-8155-6d29393b2540
+:END:
+
 **** DONE RAG
 CLOSED: [2025-11-14 Fri 13:36]
 :PROPERTIES:
@@ -51,6 +57,7 @@ CLOSED: [2025-11-14 Fri 13:36]
 :LOGBOOK:
 - State "DONE"       from "INPROGRESS" [2025-11-14 Fri 13:36]
 :END:
+
 
 *** TODO Domain Context
 :PROPERTIES:
@@ -83,4 +90,10 @@ CLOSED: [2025-11-14 Fri 13:36]
 :PROPERTIES:
 :CREATED:  [2025-11-17 Mon 13:49]
 :ID:       a9fc2f15-2b31-4c1c-9de4-e64530ea245c
+:END:
+
+** TODO 
+:PROPERTIES:
+:CREATED:  [2025-11-17 Mon 13:50]
+:ID:       ec546001-ea31-4233-832c-7ef9cbe16ee3
 :END:
