--- a/todo.org
+++ b/todo.org
@@ -42,7 +42,7 @@ CLOSED: [2025-11-17 Mon 13:27]
 :ID:       5583d178-4227-4c4c-a312-d7504461fb88
 :END:
 
-**** INPROGRESS 
+**** INPROGRESS Prompting 
 :PROPERTIES:
 :CREATED:  [2025-11-17 Mon 13:59]
 :ID:       b621559c-7261-4786-8155-6d29393b2540
