--- a/todo.org
+++ b/todo.org
@@ -47,6 +47,9 @@ CLOSED: [2025-11-17 Mon 13:27]
 :CREATED:  [2025-11-17 Mon 13:59]
 :ID:       b621559c-7261-4786-8155-6d29393b2540
 :END:
+:LOGBOOK:
+CLOCK: [2025-11-17 Mon 14:00]
+:END:
 
 **** DONE RAG
 CLOSED: [2025-11-14 Fri 13:36]
