--- a/main.tex
+++ b/main.tex
@@ -421,7 +421,8 @@ population.
     qiao2023ReasoningWithLanguage,schulhoff2024PromptReportSystematic,
     white2023PromptPatternCatalog} due to its openness and lack of consensus
   apart from general
-  principles\footnote{\href{https://help.openai.com/en/articles/ 6654000-best-practices-for-prompt-engineering-with-the-openai-api}{Best
+  principles\footnote{\href{https://help.openai.com/en/articles/\
+      6654000-best-practices-for-prompt-engineering-with-the-openai-api}{Best
       Practices for Prompt Engineering with OpenAI API}} for structuring
   prompts. Taking advantage of the in-context learning capabilities of LLMs,
   prompting methods focus on strategies that require the LLM to either perform
