--- a/main.tex
+++ b/main.tex
@@ -365,7 +365,7 @@ population. Choosing an appropriate LLM is governed by several additional
 factors:
 \begin{itemize}
 \item The emergent abilities of LLMs grows with \textbf{model size}
-  \cite{chalmers2023CouldLargeLanguage}. Thus, it may be often desirable to
+  \cite{chalmers2023CouldLargeLanguage}. Thus, it may be desirable to
   use larger LLMs for ontology population. However, the choice of an LLM based
   on model size is closely related to other LLM factors. For domains in the
   long-tail of the pre-training corpus, LLMs may struggle with proper ontology
