--- a/main.tex
+++ b/main.tex
@@ -367,10 +367,9 @@ factors:
 \item The emergent abilities of LLMs grows with \textbf{model size}
   \cite{chalmers2023CouldLargeLanguage}. Thus, it may be desirable to use
   larger LLMs for ontology population. However, the choice of an LLM based on
-  model size is closely related to other LLM factors. For domains in the
-  long-tail of the pre-training corpus, LLMs may struggle with proper ontology
-  population \cite{kandpal2023LargeLanguageModels}. In such situations,
-  fine-tuning is known to outperform in-context learning
+  model size is closely related to other LLM factors.  LLMs are known to
+  struggle with long-tail knowledge \cite{kandpal2023LargeLanguageModels}.  In
+  such situations, fine-tuning is known to outperform in-context learning
   \cite{liu2022FewShotParameter}. Owing to their size, larger LLMs may be
   difficult to fine-tune due to computational resource limitations. In such
   cases, smaller LLMs offer performant alternatives for fine-tuning.
