--- a/main.tex
+++ b/main.tex
@@ -366,7 +366,7 @@ factors:
 \begin{itemize}
 \item The emergent abilities of LLMs grows with \textbf{model size}
   \cite{chalmers2023CouldLargeLanguage}. Thus, it may be desirable to use
-  larger LLMs for ontology population. However, the choice of an LLM based on
+  larger LLMs for ontology learning tasks. However, the choice of an LLM based on
   model size is closely related to other LLM factors. LLMs are known to
   struggle with long-tail knowledge \cite{kandpal2023LargeLanguageModels}. In
   such situations, fine-tuning is known to outperform in-context learning
