--- a/main.tex
+++ b/main.tex
@@ -366,8 +366,8 @@ factors:
 \begin{itemize}
 \item The emergent abilities of LLMs grows with \textbf{model size}
   \cite{chalmers2023CouldLargeLanguage}. Thus, it may be desirable to use
-  larger LLMs for ontology learning tasks. However, the choice of an LLM based on
-  model size is closely related to other LLM factors. LLMs are known to
+  larger LLMs for ontology learning tasks. However, the choice of an LLM based
+  on model size is closely related to other LLM factors. LLMs are known to
   struggle with long-tail knowledge \cite{kandpal2023LargeLanguageModels}. In
   such situations, fine-tuning is known to outperform in-context learning
   \cite{liu2022FewShotParameter}. Owing to their size, larger LLMs may be
