--- a/main.tex
+++ b/main.tex
@@ -371,8 +371,9 @@ factors:
   struggle with long-tail knowledge \cite{kandpal2023LargeLanguageModels}. In
   such situations, fine-tuning is known to outperform in-context learning
   \cite{liu2022FewShotParameter}. Owing to their size, larger LLMs may be
-  difficult to fine-tune due to computational resource limitations. In such
-  cases, smaller LLMs offer performant alternatives for fine-tuning.
+  difficult to fine-tune due to computational resource limitations. When
+  working with ontologies in the long-tail of LLMs, domain-specific
+  fine-tuning of smaller LLMs provides a performant alternative.
 \item The \textbf{availability} of model weights enables task-specific
   fine-tuning and further analysis of performance. However, commercially
   available state-of-the-art LLMs operate as `black-boxes' that prevents
