--- a/main.tex
+++ b/main.tex
@@ -366,9 +366,9 @@ factors:
 \begin{itemize}
 \item The emergent abilities of LLMs grows with \textbf{model size}
   \cite{chalmers2023CouldLargeLanguage}. Thus, it may be desirable to use
-  larger LLMs for ontology learning tasks. While LLMs are accurate on topics
-  of greater popularity, they are known to struggle and hallucinate with
-  long-tail knowledge \cite{kandpal2023LargeLanguageModels}. In such
+  larger LLMs for ontology learning tasks. However, while LLMs are accurate on
+  topics of greater popularity, they are known to struggle and hallucinate
+  with long-tail knowledge \cite{kandpal2023LargeLanguageModels}. In such
   situations, fine-tuning is known to outperform in-context learning
   \cite{liu2022FewShotParameter}. Owing to their size, larger LLMs may be
   difficult to fine-tune due to computational resource limitations. When
