--- a/main.tex
+++ b/main.tex
@@ -369,8 +369,10 @@ factors:
   larger LLMs for ontology learning tasks. However, while LLMs are accurate on
   topics of greater popularity, they are known to struggle and hallucinate
   with long-tail knowledge \cite{kandpal2023LargeLanguageModels}. In such
-  situations, fine-tuning is known to outperform in-context learning
-  \cite{liu2022FewShotParameter}. Owing to their size, larger LLMs may be
+  situations, choosing a larger model itself is insufficient to alleviate the
+issue. When in-context learning is unable to peform well, fine-tuning is known
+to provide significant performance benefits
+\cite{liu2022FewShotParameter}. Owing to their size, larger LLMs may be
   difficult to fine-tune due to computational resource limitations. When
   working with ontologies in the long-tail of LLMs, domain-specific
   fine-tuning of smaller LLMs provides a performant alternative.
