--- a/main.tex
+++ b/main.tex
@@ -390,9 +390,11 @@ factors:
   research to bridge the gap in performance across all natural language
   processing (NLP) tasks.
 \item LLMs are capable of handling a wide variety of tasks. However, they do
-  struggle with \textbf{specialization} in reasoning. LLM-supported ontology
-  population requires an LLM to understand and reason over concepts, their
-  hierarchy and assign new instances. Investigation of performance of
+  struggle with \textbf{specialization} in reasoning.  Ontology learning with
+  LLMs requires a good understanding of ontological entity types, taxonomies
+  and relations with several tasks requiring multi-hop reasoning LLM-supported
+  ontology population requires an LLM to understand and reason over concepts,
+  their hierarchy and assign new instances. Investigation of performance of
   general-purpose LLMs versus reasoning-specific LLMs highlights the
   significance of LLM reasoning capabilities to identify correct
   assertions. It shows whether simple textual pre-training and instruction
