--- a/main.tex
+++ b/main.tex
@@ -392,14 +392,13 @@ factors:
 \item LLMs are capable of handling a wide variety of tasks. However, they do
   struggle with \textbf{specialization} in reasoning. Ontology learning with
   LLMs requires a good understanding of ontological entity types, taxonomies
-  and relations with several tasks requiring multi-hop reasoning LLM-supported
-  ontology population requires an LLM to understand and reason over concepts,
-  their hierarchy and assign new instances. Investigation of performance of
-  general-purpose LLMs versus reasoning-specific LLMs highlights the
-  significance of LLM reasoning capabilities to identify correct
-  assertions. It shows whether simple textual pre-training and instruction
-  fine-tuning is sufficient for ontology population or additional reasoning
-  abilities are necessary to accomplish the task.
+  and relations with several tasks requiring multi-hop
+  reasoning. Investigation of performance of general-purpose LLMs versus
+  reasoning-specific LLMs highlights the significance of LLM reasoning
+  capabilities to identify correct assertions. It shows whether simple textual
+  pre-training and instruction fine-tuning is sufficient for ontology
+  population or additional reasoning abilities are necessary to accomplish the
+  task.
 \end{itemize}
 
 \subsubsection{Task:}
