--- a/main.tex
+++ b/main.tex
@@ -395,7 +395,7 @@ factors:
   and relations with several tasks requiring multi-hop reasoning.
   Investigation of performance of general-purpose LLMs versus
   reasoning-specific LLMs highlights the significance of LLM reasoning
-  capabilities to identify correct assertions. It shows whether simple textual
+  capabilities for ontology learning. It shows whether simple textual
   pre-training and instruction fine-tuning is sufficient for ontology
   population or additional reasoning abilities are necessary to accomplish the
   task.
