--- a/main.tex
+++ b/main.tex
@@ -156,8 +156,8 @@ of text summarization, retrieval-augmented-generation and prompt engineering
 \cite{norouzi2024OntologyPopulationUsing}.
 
 \citet{sahbi2025SemanticVs} compare a traditionally semantic approach and an
-LLM-based approach for ontology population in French. The results show that
-the semantic approach is consistent and logically coherent, but creates
+LLM-based approach for ontology population in French. The results illustrate
+that the semantic approach is consistent and logically coherent, but creates
 redundancy, while the LLM creates no redundancies but is not always
 consistent.
 
@@ -395,9 +395,10 @@ factors:
   and relations with several tasks requiring multi-hop reasoning.
   Investigation of performance of general-purpose LLMs versus
   reasoning-specific LLMs highlights the significance of LLM reasoning
-  capabilities for ontology learning. It shows whether simple textual
-  pre-training and instruction fine-tuning is sufficient for ontology
-  population or additional reasoning abilities are necessary to accomplish the
+  capabilities for ontology learning.
+  It demonstrates whether
+  It shows whether simple textual
+  pre-training and instruction fine-tuning is sufficient for ontoor additional reasoning abilities are necessary to accomplish the
   task.
 \end{itemize}
 
