--- a/main.tex
+++ b/main.tex
@@ -395,11 +395,9 @@ factors:
   and relations with several tasks requiring multi-hop reasoning.
   Investigation of performance of general-purpose LLMs versus
   reasoning-specific LLMs highlights the significance of LLM reasoning
-  capabilities for ontology learning.
-  It demonstrates whether
-  It shows whether simple textual
-  pre-training and instruction fine-tuning is sufficient for ontoor additional reasoning abilities are necessary to accomplish the
-  task.
+  capabilities for ontology learning. In particular, it investigates the
+  importance of using specific reasoning-based models to perform nuanced
+  ontology learning.
 \end{itemize}
 
 \subsubsection{Task:}
