--- a/main.tex
+++ b/main.tex
@@ -395,9 +395,9 @@ factors:
   and relations with several tasks requiring multi-hop reasoning.
   Investigation of performance of general-purpose LLMs versus
   reasoning-specific LLMs highlights the significance of LLM reasoning
-  capabilities for ontology learning. In particular, it probes the
-  importance of using specific reasoning-based models to perform nuanced
-  ontology learning.
+  capabilities for ontology learning. In particular, it probes the importance
+  of using specific reasoning-based models to perform nuanced ontology
+  learning.
 \end{itemize}
 
 \subsubsection{Task:}
