--- a/main.tex
+++ b/main.tex
@@ -402,13 +402,13 @@ factors:
 
 \subsubsection{Task:}
 \label{subsubsec:llm-factor-task}
-LLMs are used for a broad set of NLP-specific tasks. They are `prompted' with
-a task description and provided guidelines to generate responses that coincide
-with the task-specific responses desired. As models that use in-context
-learning to understand the task from the input prompt, the formulation of the
-task is a factor for LLM-supported ontology population. Formulation as a
-classification or a retrieval task can lead to varied performance exhibited by
-the LLM.
+LLMs are used for a broad set of NLP-specific tasks. Instruction-tuned LLMs
+are `prompted' with a task description and provided guidelines to generate
+responses that coincide with the task-specific responses desired. As models
+that use in-context learning to understand the task from the input prompt, the
+formulation of the task is a factor for LLM-supported ontology
+population. Formulation as a classification or a retrieval task can lead to
+varied performance exhibited by the LLM.
 
 \subsubsection{Approach:}
 \label{subsubsec:llm-factor-approach}
