--- a/main.tex
+++ b/main.tex
@@ -406,8 +406,8 @@ LLMs are used for a broad set of NLP-specific tasks. Instruction-tuned LLMs
 are `prompted' with a task description and guidelines to generate responses
 that coincide with the task-specific responses desired. As models that use
 in-context learning to understand the task from the input prompt, the
-formulation of the task is a factor for LLM-supported ontology
-population. Formulation as a classification or a retrieval task can lead to
+formulation of the task is a factor for any ontology learning
+objective. Formulation as a classification or a retrieval task can lead to
 varied performance exhibited by the LLM.
 
 \subsubsection{Approach:}
