--- a/main.tex
+++ b/main.tex
@@ -407,8 +407,8 @@ are `prompted' with a task description and guidelines to generate responses
 that coincide with the task-specific responses desired. As models that use
 in-context learning to understand the task from the input prompt, the
 formulation of the task is a factor for any ontology learning
-objective. Formulation as a classification or a retrieval task can lead to
-varied performance exhibited by the LLM.
+objective. Formulation as a classification, a retrieval or another task can
+lead to varied performance exhibited by the LLM.
 
 \subsubsection{Approach:}
 \label{subsubsec:llm-factor-approach}
