--- a/main.tex
+++ b/main.tex
@@ -400,8 +400,8 @@ factors:
   learning.
 \end{itemize}
 
-\subsubsection{Task:}
-\label{subsubsec:llm-factor-task}
+\subsubsection{Objective Modelling:}
+\label{subsubsec:llm-factor-objective-modelling}
 LLMs are used for a broad set of NLP-specific tasks. Instruction-tuned LLMs
 are `prompted' with a task description and guidelines to generate responses
 that coincide with the task-specific responses desired. As models that use
