--- a/main.tex
+++ b/main.tex
@@ -404,8 +404,7 @@ factors:
 \label{subsubsec:llm-factor-objective-modelling}
 LLMs are used for a broad set of tasks that can be modelled as various NLP
 objectives. Instruction-tuned LLMs are `prompted' with a task description and
-guidelines to generate responses that coincide with the task-specific
-responses desired. As models that use in-context learning to understand the
+a response format that complies with the modelled objective. As models that use in-context learning to understand the
 task from the input prompt, the formulation of the task is a factor for any
 ontology learning objective. Formulation as a classification, a retrieval or
 another task can lead to varied performance exhibited by the LLM.
