--- a/main.tex
+++ b/main.tex
@@ -421,7 +421,7 @@ LLMs can be utilized as instruction-following agents, fine-tuned for a
 specific objective or coupled with a data store to facilitate
 data-substantiated text generation. Different approaches highlight the level
 of context, task adaptation and data grounding required by LLMs for ontology
-population.
+learning.
 
 \begin{itemize}
 % Prompting
@@ -446,7 +446,12 @@ population.
   task-specific \textbf{fine-tuning} provides an effective strategy to improve
   performance when in-context learning is unable to yield improvements
   \cite{liu2022FewShotParameter}.
-  As mentioned previously, \textbf{fine-tuning} enabl
+  As mentioned previously, domain and task-specific \textbf{fine-tuning}
+  provides performance improvements when prompting-based approaches are
+  insufficient. When working with information in the long-tail, fine-tuning
+  allows LLMs to adapt better than with in-context learning. Fine-tuning
+  allows LLMs to carry out ontology learning over ontologies that are in the
+  long-tail. Fine-tuning approaches 
 % RAG
 \item \textbf{Retrieval-augmented Generation (RAG)}
   \cite{lewis2020RetrievalAugmentedGeneration} provides LLMs with an external
