--- a/main.tex
+++ b/main.tex
@@ -445,13 +445,14 @@ learning.
 \item While LLMs are capable of performing several tasks `as-is',
   task-specific \textbf{fine-tuning} provides an effective strategy to improve
   performance when in-context learning is unable to yield improvements
-  \cite{liu2022FewShotParameter}.
-  As mentioned previously, domain and task-specific \textbf{fine-tuning}
-  provides performance improvements when prompting-based approaches are
-  insufficient. When working with information in the long-tail, fine-tuning
-  allows LLMs to adapt better than with in-context learning. Fine-tuning
-  allows LLMs to carry out ontology learning over ontologies that are in the
-  long-tail. Fine-tuning approaches 
+  \cite{liu2022FewShotParameter}.  As mentioned previously, domain and
+  task-specific \textbf{fine-tuning} provides performance improvements when
+  prompting-based approaches are insufficient. When working with information
+  in the long-tail, fine-tuning allows LLMs to adapt better than with
+  in-context learning. It facilitates ontology learning over ontologies that
+  are in the long-tail of an LLM's pre-training data. Fine-tuning approaches
+  for ontology learning demonstrate the requirement of domain-specific
+  ontology data availability for LLM-supported ontology learning.
 % RAG
 \item \textbf{Retrieval-augmented Generation (RAG)}
   \cite{lewis2020RetrievalAugmentedGeneration} provides LLMs with an external
