--- a/main.tex
+++ b/main.tex
@@ -450,9 +450,7 @@ learning.
   prompting-based approaches are insufficient. When working with information
   in the long-tail, fine-tuning allows LLMs to adapt better than with
   in-context learning. It facilitates ontology learning over ontologies that
-  are in the long-tail of an LLM's pre-training data. Fine-tuning approaches
-  for ontology learning demonstrate the requirement of domain-specific
-  ontology data availability for LLM-supported ontology learning.
+  are in the long-tail of an LLM's pre-training data. 
 % RAG
 \item \textbf{Retrieval-augmented Generation (RAG)}
   \cite{lewis2020RetrievalAugmentedGeneration} provides LLMs with an external
