--- a/main.tex
+++ b/main.tex
@@ -419,9 +419,9 @@ versus as a ranked retrieval objective.
 
 LLMs can be utilized as instruction-following agents, fine-tuned for a
 specific objective or coupled with a data store to facilitate
-data-substantiated text generation. Different approaches highlight the level
-of context, task adaptation and data grounding required by LLMs for ontology
-learning.
+data-substantiated text generation. Comparison of performance across different
+approaches highlights the relevance of pre-learnt information, task-specific
+augmentation and data availability for ontology learning
 
 \begin{itemize}
 % Prompting
