--- a/main.tex
+++ b/main.tex
@@ -459,7 +459,9 @@ augmentation and data availability for ontology learning
   provide greater domain specificity through the knowledge source context. RAG
   for ontology learning highlights how LLM performance improves when providing
   a specific domain knowledge source. This performance is of particular
-  interest when working with ontologies in the long-tail.
+  interest when working with ontologies in the long-tail. RAG models provide
+  a cost-effective alternative to fine-tuning while still operating on the
+  same objective of performance improvement and response factuality.
 \end{itemize}
 
 \subsubsection{Domain Context:}
