--- a/main.tex
+++ b/main.tex
@@ -421,7 +421,7 @@ LLMs can be utilized as instruction-following agents, fine-tuned for a
 specific objective or coupled with a data store to facilitate
 data-substantiated text generation. Comparison of performance across different
 approaches highlights the relevance of pre-learnt information, task-specific
-augmentation and data availability for ontology learning
+augmentation and data availability for ontology learning.
 
 \begin{itemize}
 % Prompting
