--- a/main.tex
+++ b/main.tex
@@ -425,7 +425,7 @@ augmentation and data availability for ontology learning.
 
 \begin{itemize}
 % Prompting
-\item A significant number of LLM approaches are focused on \textbf{prompting}
+\item A significant number of LLM approaches focus on \textbf{prompting}
   strategies. Prompt engineering has itself become an area of research
   \cite{liu2023JailbreakingChatgptVia,mosbach2023FewShotFine,
     qiao2023ReasoningWithLanguage,schulhoff2024PromptReportSystematic,
