--- a/todo.org
+++ b/todo.org
@@ -81,12 +81,14 @@ CLOSED: [2025-11-17 Mon 15:53]
 :END:
 
 
-**** INPROGRESS RAG
+**** DONE RAG
+CLOSED: [2025-11-17 Mon 15:53]
 :PROPERTIES:
 :CREATED:  [2025-11-14 Fri 13:24]
 :ID:       d50ae0e4-fe53-4203-b79f-676596357d2e
 :END:
 :LOGBOOK:
+- State "DONE"       from "INPROGRESS" [2025-11-17 Mon 15:53]
 - State "INPROGRESS" from "DONE"       [2025-11-17 Mon 15:53]
 - State "DONE"       from "INPROGRESS" [2025-11-14 Fri 13:36]
 :END:
