--- a/main.tex
+++ b/main.tex
@@ -466,6 +466,8 @@ augmentation and data availability for ontology learning.
 
 \subsubsection{Domain Context:}
 \label{subsubsec:llm-factor-domain-context}
+LLMs can be prompted to assume certain roles/personas e.g. `helpful assistant'
+while performing a certain task.
 
 \cite{zheng2023WhenAeHelpful}
 
