--- a/main.tex
+++ b/main.tex
@@ -467,7 +467,8 @@ augmentation and data availability for ontology learning.
 \subsubsection{Domain Context:}
 \label{subsubsec:llm-factor-domain-context}
 LLMs can be prompted to assume certain roles/personas e.g. `helpful assistant'
-while performing a certain task.
+while performing a certain task. These roles define a domain space for the LLM
+and contextualizes the input and task accordingly.
 
 \cite{zheng2023WhenAeHelpful}
 
