--- a/main.tex
+++ b/main.tex
@@ -468,7 +468,8 @@ augmentation and data availability for ontology learning.
 \label{subsubsec:llm-factor-domain-context}
 LLMs can be prompted to assume certain roles/personas e.g. `helpful assistant'
 while performing a certain task. These roles define a domain space for the LLM
-and contextualizes the input and task accordingly.
+and is a powerful tool that contextualizes the task and user input data for
+the LLM
 
 \cite{zheng2023WhenAeHelpful}
 
